Fix z-indexing issue, move artwork search CSS

--- a/themes/artmaps/style.css
+++ b/themes/artmaps/style.css
@@ -514,7 +514,7 @@ body:before {
 }
 
 /* Fade out Google Maps controls when in a lightbox */
-.fancybox-lock .gmnoprint {
+.fancybox-lock .gmnoprint, .fancybox-lock .artwork-results {
   opacity: 0;
   -webkit-transition: opacity 0.5s linear;
 }
@@ -662,7 +662,7 @@ body:before {
   width:100%;
   height:100%;
   z-index:999999;
-  background:url('images/loading.gif') left center no-repeat;
+  background:rgba(255,255,255,0.1) url('images/loading.gif') center center no-repeat;
   display:block;
 }
 
@@ -677,7 +677,7 @@ body:before {
   width: 31% !important;
   border: none !important;
   background: rgba(255,255,255,0.85) !important;
-  z-index: 99999 !important;
+  z-index: 999 !important;
 }
 
 .artwork-results .ui-dialog-titlebar {
@@ -968,7 +968,7 @@ body:before {
 	left: 0;
 	overflow: hidden;
 	display: none;
-	z-index: 99999;
+	z-index: 999;
 	background: rgba(0,0,0,0.4);
 }
 
@@ -1249,6 +1249,36 @@ body:before {
   height: 100% !important;
 }
 
+.search-by-artwork {
+  white-space: nowrap;
+  padding-left:15px;
+}
+
+#search-body {
+  background-color: white;
+  height: 100%;
+  width: 100%;
+}
+#artmaps-search-form input {
+  padding: 10px;
+  font-size: 16px;
+  box-sizing:border-box;
+  background:#fff url('wp-content/themes/artmaps/images/search-icon.png') 10px center no-repeat;
+  padding-left:40px;
+  border-radius:2px;
+  z-index: 99;
+  font-family:TateNewRegular, Arial, Helvetica, sans-serif;
+  border: 2px solid gray;
+  margin-top: 5px;
+}
+#artmaps-search-form input:first-child {
+  margin-left: 5px;
+  width: 34%;
+}
+.search-page {
+  cursor: pointer;
+}
+
 footer ul {
   position: absolute;
   bottom: 30px;
@@ -1266,6 +1296,8 @@ footer ul li {
 footer ul li a {
   color:#369;
 }
+
+
 
 @media all and (max-width: 850px) {
   html,body {
@@ -1395,6 +1427,9 @@ footer ul li a {
     top:auto !important;
     right: 0px;
     pointer-events: none;
+  }
+  #artmaps-object-metadata {
+    border-radius:0px;
   }
   #artmaps-object-metadata img {
     margin-top:0px;
